# sushiscript

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Readme.md  conanfile.txt
docs/: language-specification.md
include/ast/: expression.h  statement.h
include/sushi/: ast.h  code-generation.h  lexer.h  pipeline.h  scope.h  type-system.h
include/sushi/ast/: expression.h  interpolated-string.h  statement.h  to-string.h  type-expr.h  type.h
include/sushi/ast/expression/: binary-expr.h  command-like.h  expression.h  identifier.h  indexing.h  literal.h  unary-expr.h  variable.h  visitor.h
include/sushi/ast/statement/: concrete-stmt.h  statement.h
include/sushi/code-generation/: builtin-bash.h  cmdlike-visitor.h  code-generation.h  expr-visitor.h  literal-visitor.h  scope-manager.h  stmt-visitor.h  sushi-builtin-bash.h  type-visitor.h  util.h  visitor.h
include/sushi/code-generation/visitor/: cmdlike-visitor.h  expr-visitor.h  literal-visitor.h  stmt-visitor.h  type-visitor.h
include/sushi/lexer/: context.h  error.h  lexer.h  lookahead-stream.h  token-location.h  token.h
include/sushi/lexer/detail/: character-config.h  lexeme.h  lexer-state.h  lookahead-stream.h  source-stream.h
include/sushi/parser/: error.h  parser.h  token-util.h
include/sushi/parser/detail/: error-record-lexer.h  lexer-util.h  parser-state.h  token-util.h
include/sushi/pipeline/: config.h  pipeline.h
include/sushi/scope/: envirment.h  environment.h  error.h  scope-check.h  scope.h  statement-visitor.h  type-check.h  util.h
include/sushi/scope/visitor/: command-like-visitor.h  expression-visitor.h  literal-visitor.h  statement-visitor.h  type-visitor.h
include/sushi/type-system/: error.h  type-checking.h  type.h
include/sushi/type-system/type-check/: error.h  expression.h  state.h  statement.h
include/sushi/util/: container.h  meta.h  optional.h  visitor.h
src/: main.cpp
src/code-generation/: code-generation.cpp
src/sushi/code-generation/: cmdlike-visitor.cpp  code-generation.cpp  expr-visitor.cpp  literal-visitor.cpp
src/sushi/code-generation/visitor/: cmdlike-visitor.cpp  expr-visitor.cpp  literal-visitor.cpp  stmt-visitor.cpp
src/sushi/lexer/: context.cpp  lexeme.cpp
src/sushi/parser/: lexer-util.cpp  parser.cpp  token-util.cpp
src/sushi/pipeline/: pipeline.cpp
src/sushi/scope/: environment.cpp  scope-check.cpp  scope.cpp  type-check.cpp
src/sushi/scope/visitor/: command-like-visitor.cpp  expression-visitor.cpp  literal-visitor.cpp  statement-visitor.cpp  type-visitor.cpp
src/sushi/type-system/: expression.cpp  statement.cpp
test/code-generation/: expression-test.cpp  statement-test.cpp  util.h
test/code-generation/sushi-test-scripts/: .gitignore  expr-cmdlike.sus  expr-lit-var.sus  expr-unary-binary.sus  fab.sus  hello_world.sus  test_input
test/lexer/: error-handling.cpp  interpolation.cpp  lexer-test.cpp  simple-sequence.cpp  single-token.cpp  util.h
test/parser/: expression-test.cpp  lexer-util-test.cpp  parse-error.cpp  statement.cpp  util.h
test/pipeline/: parser.cpp  util.h
test/scope/: command-like.cpp  expression.cpp  scope.cpp  statement.cpp  util.h
test/scope/visitor/include/: command-like-visitor.h  expression-visitor.h  literal-visitor.h  statement-visitor.h
test/scope/visitor/src/: command-like-visitor.cpp  expression-visitor.cpp  literal-visitor.cpp  statement-visitor.cpp
test/type-check/: basic-test.cpp  expression-test.cpp  statement-test.cpp  util.h  variable-test.cpp
